# DaphniaDetectv2

./: .gitignore  BuildADataset.md  README.md  events.out.tfevents.1742208313.btb1x3.3234001.0  pyproject.toml  results.csv
DaphniaDetect/: BoundingBoxOnly.py  DaphnidDetector.py  InstallManually.txt  Readme.md  environment.yml  requirements.txt  setup.py
DaphniaDetect/DetectorCode/: ConvertToJPG.py  Convert_to_JPG.py  DataDict.py  NMS_Crop.py  NMS_detect.py  PredicitionSave.py  ScaleDetect.py  SegmentYOLODeploy.py  __init__.py
DaphniaDetect/Model/classify/: args.yaml
DaphniaDetect/Model/detect/: events.out.tfevents.1739209324.btb1x3.3338628.0
DaphniaDetect/Model/segment/: args.yaml
Tutorial/: Classification.yaml  DeployAModel.md  TrainModel.md
runs/detect/train/: args.yaml
runs/detect/train10/: args.yaml
runs/detect/train11/: args.yaml
runs/detect/train12/: args.yaml
runs/detect/train13/: args.yaml  results.csv
runs/detect/train14/: args.yaml  results.csv
runs/detect/train15/: args.yaml
runs/detect/train16/: args.yaml
runs/detect/train17/: args.yaml
runs/detect/train18/: args.yaml
runs/detect/train19/: args.yaml  results.csv
runs/detect/train2/: args.yaml
runs/detect/train20/: args.yaml  results.csv
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml
runs/detect/train7/: args.yaml
runs/detect/train8/: args.yaml
runs/detect/train9/: args.yaml
src/daphniadetectv2/: BatchProcess.py  BoundingBoxOnly.py  DaphnidDetector.py  __init__.py
(+40 files in other folders)
